src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.App {
  display: flex;
  height: 100vh;
}

.code-area {
  width: 50%;
  display: flex;
  flex-direction: column;
  border-right: 5px solid gray;
}

.console {
  border-top: 5px solid gray;
  padding: 0.5rem;
}

.content {
  overflow: hidden;
  width: 50%;
  padding: 2rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.story {
  align-self: flex-start;
}

.inventory {
  display: grid;
  grid-template-columns: repeat(12, 3.5vw);
  grid-template-rows: repeat(5, 3.5vw);
  grid-gap: 0px;
  text-align: center;
  background-color: #303030;
}

.top {
  align-self: flex-start;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  /* margin-bottom: 5vh; */
}

.bottom {
  /* margin: 0; */
  /* margin-bottom: 20vh; */
}

.help-text {
  /* margin-top: 10vh; */
}

.cell {
  background-color: #303030;
  border-bottom: 1px solid black;
  border-right: 1px solid black;
}

.story-img {
  justify-self: flex-start;
}

.scroll {
  width: 3.5vw;
  height: 3.5vw;
}

@media (max-width: 500px) {
  .App {
    display: grid;
    grid-template-rows: 1fr 1fr 5vh;
    grid-template-areas:
      "content"
      "code"
      "console";
  }
  .code-area {
    width: 100%;
    grid-area: code;
    border-right: none;
    border-top: 5px solid gray;
  }
  .console {
    grid-area: console;
  }
  .content {
    grid-area: content;
    width: 100%;
  }

  .scroll {
    width: 7vw;
    height: 7vw;
  }
  .inventory {
    grid-template-columns: repeat(12, 7vw);
    grid-template-rows: repeat(5, 7vw);
  }

  .help-text {
    margin-top: 1vh;
  }
}

